# 10701_light_estimation

./: .gitignore  .gitmodules  README.md  benchmark_pos.py  blender.py  demo.ipynb  download_meshes.sh  pyproject.toml
blender/: img_000.tiff  img_001.tiff  img_002.tiff  img_003.tiff  img_004.tiff  img_005.tiff  img_006.tiff  img_007.tiff  img_008.tiff  img_009.tiff  img_010.tiff  img_011.tiff  img_012.tiff  img_013.tiff  img_014.tiff  img_015.tiff  img_016.tiff  img_017.tiff  img_018.tiff  img_019.tiff  img_020.tiff  img_021.tiff  img_022.tiff  img_023.tiff  img_024.tiff  img_025.tiff  img_026.tiff  img_027.tiff  img_028.tiff  img_029.tiff
dataset/: img_000.tiff  img_001.tiff  img_002.tiff  img_003.tiff  img_004.tiff  img_005.tiff  img_006.tiff  img_007.tiff  img_008.tiff  img_009.tiff  img_010.tiff  img_011.tiff  img_012.tiff  img_013.tiff  img_014.tiff  img_015.tiff  img_016.tiff  img_017.tiff  img_018.tiff  img_019.tiff  img_020.tiff  img_021.tiff  img_022.tiff  img_023.tiff  img_024.tiff  img_025.tiff  img_026.tiff  img_027.tiff  img_028.tiff  img_029.tiff  lights_meta.json
results/baseline/: albedos.npy  light_directions.npy
results/bunny/calibrated_ff/: albedos.npy
results/bunny/gt/: albedos.npy  light_directions.npy  normals.npy
results/bunny/uncalibrated_ff/: albedos.npy  light_directions_estimated.npy
results/sphere/gt/: albedos.npy  normals.npy
src/: baseline.py  calibrated_ff.py  dataset.py  gen_dataset.py  gradient_domain.py  load_obj.py  photometric.py  uncalibrated_ff.py  util.py  visualize.py
src/Poisson-Depth-Recovery/: main.py
